Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBoolObjNumber.quorum
class Main
    action Main
        Boolean v
        v:SetValue(Test())
    end

    action Test() returns Boolean
        number var = 5.0
        return var
    end
end